added the third and fourth blog

--- a/input.html
+++ b/input.html
@@ -11,5 +11,17 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur obcaecati blanditiis porro perspiciatis ut assumenda vitae in eaque perferendis fuga harum voluptatum, cum aliquid non earum amet, exercitationem nobis quos.</p>
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur obcaecati blanditiis porro perspiciatis ut assumenda vitae in eaque perferendis fuga harum voluptatum, cum aliquid non earum amet, exercitationem nobis quos.</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur obcaecati blanditiis porro perspiciatis ut assumenda vitae in eaque perferendis fuga harum voluptatum, cum aliquid non earum amet, exercitationem nobis quos.</p>
+    </div>
+    <div>
+        <h3>My fourth website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur obcaecati blanditiis porro perspiciatis ut assumenda vitae in eaque perferendis fuga harum voluptatum, cum aliquid non earum amet, exercitationem nobis quos.</p>
+    </div>
 </body>
 </html>
