added a list to push code

--- a/input.html
+++ b/input.html
@@ -23,5 +23,13 @@
         <h3>My fourth website</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur obcaecati blanditiis porro perspiciatis ut assumenda vitae in eaque perferendis fuga harum voluptatum, cum aliquid non earum amet, exercitationem nobis quos.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ol>
+    </div>
 </body>
 </html>
