added saxion university

--- a/input.html
+++ b/input.html
@@ -31,5 +31,9 @@
             <li>git push</li>
         </ol>
     </div>
+    <div>
+        <h3>Saxion university of applied science</h3>
+        <img src="Mysaxion.jpg" alt="">
+    </div>
 </body>
 </html>
