--- a/input.html
+++ b/input.html
@@ -33,7 +33,7 @@
     </div>
     <div>
         <h3>Saxion university of applied science</h3>
-        <img src="Mysaxion.jpg" alt="">
+        <img width="100px" src="Mysaxion.jpg" alt="">
     </div>
 </body>
 </html>
